Bug 1410023 - Non-unified build fixes for xpcom/threads. r=froydnj

The recent Timer implementation changes from Bug 1404198 broke non-unified builds.